WebHelpers ChangeLog

0.2.3 (**svn**)
* Updated Ajax commands to internally use 'with_' to avoid name conflicts with
  Python 2.5 and beyond. Reported by anilj. Fixes #190.
* Applied patch from David Smith to decude URL parts as Routes does.
  Fixes #186.
* Changed pagination to give better response if its passed an invalid object.
  Patch from Christoph Haas.
* Fixed scriptaculous helper docs example. Fixes #178.
* Updated scriptaculous/prototype to Prototype 1.5.0 and Scriptaculous 1.7.0.
* Updated scriptaculous javascripts to 1.6.5. Fixes #155.
* Updated remote_function doc-string to more clearly indicate the arguments
  it can recieve.
* Synced Rails Javascript helper to 5245 (escape_javascript now escaping
  backslashes and allow passing html_options to javascript_tag).

0.2.2 (10/20/06)
* Fixed tag_options function to not str() string and let html_escape handle
  it so unicode is properly handled. Reported with fix by Michael G. Noll.
* Added sqlalchemy.Query support to the pagination orm wrappers, patch from
  Andrija Zarić
* Fixed python 2.3 compliance in webhelpers.rails (use of sorted()) (Thanks
  Jamie Wilkinson)

0.2.1 (9/7/06)
* Adding counter func to text helpers, patch from Jamie Wilkinson.
* Sync'd Rails Text helper to 4994.
* Sync'd Rails Asset tag helper to 4999.
* Sync'd Rails Form tag helper to 5045, also doesn't apply to our version.
* Sync'd Rails Javascript func to 5039, doesn't apply to us.
* Updated Scriptaculous to 1.6.3.
* Updated Prototype to 1.5.0_rc1.
* Updated radio_button so that id's are unique. Brings up to date with Rails
  changeset #4925, also fixes #103.
* More precise distance_of_time_in_words (Follows bottom half of #4989 Rails
  changeset)
* button_to accepts method keyword so you can PUT and DELETE with it. 
  (Follows #4914 Rails changeset)
* Fixed auto_link to parse more valid url formats (Thanks Jamie Wilkinson).
* Sync'd text helper from latest Rails version.
* Fixed form tag's method matching to be case insensitive.
